// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMMMath #calculateExecutionUpdates outputs the correct results when gas 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 73795,
}
`;

exports[`TWAMMMath #calculateTimeBetweenTicks outputs the correct results when gas 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 57008,
}
`;
